tests/fixtures/errors/invalid_preproc_function_missing_arg.puml
@startuml
!function Need($a, $b)
!return $a + $b
!endfunction
A -> B: %Need("x")
@enduml
